@@ -1,13 +1,0 @@
-@comment $NetBSD: PLIST,v 1.2 2009/06/14 17:35:55 joerg Exp $
-${OCT_LOCALVEROCTFILEDIR}/${WCALC_DIR}/air_coil_calc.oct
-${OCT_LOCALVEROCTFILEDIR}/${WCALC_DIR}/air_coil_syn.oct
-${OCT_LOCALVEROCTFILEDIR}/${WCALC_DIR}/coax_calc.oct
-${OCT_LOCALVEROCTFILEDIR}/${WCALC_DIR}/coax_syn.oct
-${OCT_LOCALVEROCTFILEDIR}/${WCALC_DIR}/coupled_microstrip_calc.oct
-${OCT_LOCALVEROCTFILEDIR}/${WCALC_DIR}/coupled_microstrip_syn.oct
-${OCT_LOCALVEROCTFILEDIR}/${WCALC_DIR}/ic_microstrip_calc.oct
-${OCT_LOCALVEROCTFILEDIR}/${WCALC_DIR}/ic_microstrip_syn.oct
-${OCT_LOCALVEROCTFILEDIR}/${WCALC_DIR}/microstrip_calc.oct
-${OCT_LOCALVEROCTFILEDIR}/${WCALC_DIR}/microstrip_syn.oct
-${OCT_LOCALVEROCTFILEDIR}/${WCALC_DIR}/stripline_calc.oct
-${OCT_LOCALVEROCTFILEDIR}/${WCALC_DIR}/stripline_syn.oct
